--- a/application/single_app/templates/index.html
+++ b/application/single_app/templates/index.html
@@ -46,9 +46,8 @@
         {% endif %}
     {% endif %}
 
-    {% if session.get('user') and session['user'].get('roles')
-          and ('Admin' in session['user']['roles'] or 'User' in session['user']['roles']) %}        <div
-            class="{% if app_settings.landing_page_alignment == 'center' %}text-center{% elif app_settings.landing_page_alignment == 'right' %}text-end{% else %}text-start{% endif %}">
+    {% if auth_disabled or (session.get('user') and session['user'].get('roles') and ('Admin' in session['user']['roles'] or 'User' in session['user']['roles'])) %}
+        <div class="{% if app_settings.landing_page_alignment == 'center' %}text-center{% elif app_settings.landing_page_alignment == 'right' %}text-end{% else %}text-start{% endif %}">
             {{ landing_html | safe }}
         </div>
         <a href="{{ url_for('chats') }}" class="btn btn-primary btn-lg">
